--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "p5_test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel src/index.html --open",
+    "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
