--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "fs": "*",
     "http": "*",
     "parcel-bundler": "^1.12.5",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "ramda": "^0.28.0",
+    "@types/ramda": "^0.28.1"
   },
   "dependencies": {
     "@types/node": "^17.0.21",
